--- a/TP2PRGavecJSFRavaka/src/main/webapp/formulaire_3.xhtml
+++ b/TP2PRGavecJSFRavaka/src/main/webapp/formulaire_3.xhtml
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <h:head>
+  <h:head>
         <title>Application&gt;formulaire_3</title>
     </h:head>
     <h:body>
 
-     <h1>Application&gt;formulaire_3</h1>
+     <h1>Applicationformulaire_3</h1>
 
      <h:form>
         <h:outputLabel value="Entrez un nombre" for="nombre"/>
