--- a/TP2PRGavecJSFRavaka/src/main/webapp/formulaire_4.xhtml
+++ b/TP2PRGavecJSFRavaka/src/main/webapp/formulaire_4.xhtml
@@ -4,19 +4,19 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <h:head>
-        <title>Application&gt;formulaire_3</title>
+        <title>Application&gt;formulaire_4</title>
     </h:head>
     <h:body>
 
-        <h1>Applicationformulaire_3</h1>
+        <h1>Application&gt;formulaire_4</h1>
 
         <h:form>
             <h:outputLabel value="Entrez un nombre" for="nombre"/>
-            <h:inputText id="nombre" value="#{bean.nombre}"/>
+            <h:inputText id="nombre" value="#{bean2.nombre}"/>
             <br/>
             <h:message for="nombre"/>
             <br/>
-            <h:commandButton value="Valider" action="#{bean.afficher()}"/>
+            <h:commandButton value="Valider" action="#{bean2.afficher()}"/>
         </h:form>
     </h:body>
 </html>
